# germz

./: .gitignore  CMakeLists.txt  README.md  TODO  changelog.txt  release.bat
_res/: germz.gpl  germz_menu.gpl
data/: blob0.bm  blob1.bm  blob2.bm  blob3.bm  blob4.bm  blob5.bm  blob6.bm  blob_mask.bm  born_down.bm  born_down_mask.bm  born_left.bm  born_left_mask.bm  born_right.bm  born_right_mask.bm  born_up.bm  born_up_mask.bm  cursors.bm  cursors_mask.bm  germz.plt  germz_menu.plt  links.bm  lmc.bm  lose_down.bm  lose_down_mask.bm  lose_left.bm  lose_left_mask.bm  lose_right.bm  lose_right_mask.bm  lose_up.bm  lose_up_mask.bm  menu_main.bm  monitor.bm  move_down.bm  move_down_mask.bm  move_left.bm  move_left_mask.bm  move_right.bm  move_right_mask.bm  move_up.bm  move_up_mask.bm  (+10 more)
data/maps/: map1.json
res/: defs.json  germz.gpl  germz1.mod  germz2-25.mod  germz2.mod  germz3.mod  germz4.mod  germz5.mod  germz6.mod  mono.gpl  slide_anim.py
res/intro/: 0.pal  1.pal  2.pal  3.pal  4.pal  5.pal  6.pal  7.pal
res/maps/: 3stars.json  5forts.json  Race.json  backdoors.json  c01.json  cube.json  kriss.json  kross.json
res/maps/campaign/: c01.json  c02.json  c03.json  c04.json  c05.json  c06.json  c07.json  c08.json  c09.json  c10.json  c11.json  c12.json  c13.json  c14.json  c15.json  c16.json  c17.json
res/maps/test/: sp-test.json  team_test.json
res/outro/: 0.pal  2.pal  3.pal
src/: ai.c  ai.h  assets.c  assets.h  astar.c  astar.h  blob_anim.c  blob_anim.h  bob_new.c  bob_new.h  color.h  cutscene.c  cutscene.h  dialog_clear.c  dialog_clear.h  dialog_load.c  dialog_load.h  dialog_save.c  dialog_save.h  dialog_test.c  dialog_test.h  dialog_yes_no.c  dialog_yes_no.h  dir.h  direction.h  display.c  display.h  fade.c  fade.h  game.c  game.h  game_assets.c  game_assets.h  game_dialog.c  game_dialog.h  game_editor.c  game_editor.h  game_init.c  game_init.h  game_pause.c  (+34 more)
src/gui/: background.c  background.h  border.h  button.c  button.h  config.c  config.h  dialog.c  dialog.h  input.c  input.h  list_ctl.c  list_ctl.h
src/json/: json.c  json.h  utf8_remap.h
